--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of QBootTest is to conduct multiplier bootstrap tests for high-dimensio
 
 You can install the development version from GitHub:
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 install.packages("remotes")
 remotes::install_github("havanashw/QBootTest")
 ```
@@ -35,11 +35,15 @@ remotes::install_github("havanashw/QBootTest")
 
 ```{r}
 library(QBootTest)
+library(MASS)
 
 set.seed(1)
 n <- 80; p <- 50
-x <- matrix(rnorm(n * p), n, p)
-y <- rnorm(n)
+beta.true <- rep(1, p)
+Sig <- toeplitz(0.5^seq(0, p-1))
+error <- rnorm(n)
+x <- mvrnorm(n, mu=rep(0, p), Sigma=Sig)
+y <- x%*%beta.true + error
 
 QBootTest(x, y, tau = 0.5, method = "asymptotic")
 ```
@@ -47,24 +51,14 @@ QBootTest(x, y, tau = 0.5, method = "asymptotic")
 ### Multiplier bootstrap p-value
 
 ```{r}
-set.seed(1)
-n <- 80; p <- 50
-x <- matrix(rnorm(n * p), n, p)
-y <- rnorm(n)
-
 QBootTest(x, y, tau = 0.5, method = "bootstrap", multiplier = "gaussian", M = 200)
 ```
 
 ### Return test statistic and bootstrap draws (optional)
 
-If you want the test statistic and bootstrap replicates for plots, use `return_details = TRUE`
+If you want the test statistic and bootstrap replicates for plots, use `return_details = TRUE`:
 
 ```{r}
-set.seed(1)
-n <- 80; p <- 50
-x <- matrix(rnorm(n * p), n, p)
-y <- rnorm(n)
-
 res <- QBootTest(x, y, tau = 0.5, method = "bootstrap", 
                  multiplier = "rademacher", M = 200,
                  return_details = TRUE)
@@ -73,6 +67,6 @@ str(res, max.level = 1)
 
 ## Notes
 
-1. $x$ should be an $n \times p$ numeric matrix and $y$ is a length-$n$ numeric vector.
+1. $x$ should be an $n \times p$ numeric matrix and $y$ is an $n$ numeric vector.
 
 2. Use `scale = TRUE` if you want to standardize $x$ and $y$ before computing the test.
